# text-cleanroom

./: .bumpversion.toml  .gitignore  IP_NOTE.md  PROVENANCE.md  README.md  pyproject.toml
scripts/: run_filename_report.py
src/: fname_reporter.py
src/text_cleanroom/: filename_reporter.py  fname_reporter_cli.py
src/text_cleanroom/encoding/: __init__.py
src/text_cleanroom/filenames/: __init__.py  filename_reporter.py  fname_reporter_cli.py
src/text_cleanroom/normalize/: __init__.py
tests/: test_smoke.py
