[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-cleanroom"
version = "0.0.0"
description = "Deterministic tools for filename reporting, encoding/decoding, and text normalization."
authors = [{ name = "Dave Black" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
text-cleanroom = "text_cleanroom.filensmes.fname_reporter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
